# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1142 2012/12/04 16:28:44 zmedico Exp $

  04 Dec 2012; Zac Medico <zmedico@gentoo.org> portage-2.1.11.31.ebuild,
  portage-2.1.11.33.ebuild, portage-2.1.11.9.ebuild,
  portage-2.2.0_alpha142.ebuild, portage-2.2.0_alpha144.ebuild,
  portage-9999.ebuild:
  For compgen, require bash[readline] (bug #445576).

*portage-2.2.0_alpha144 (01 Dec 2012)

  01 Dec 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha144.ebuild,
  -portage-2.2.0_alpha143.ebuild:
  2.2.0_alpha144 version bump. This includes all of the fixes in 2.1.11.33. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.33 (01 Dec 2012)

  01 Dec 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.33.ebuild,
  -portage-2.1.11.32.ebuild:
  2.1.11.33 version bump. This fixes bug #445336 (regression in 2.1.11.32 and
  2.2.0_alpha143 which triggered 'File exists' errors with splitdebug). Bug
  #445274 tracks all bugs fixed since portage-2.1.11.31.

*portage-2.2.0_alpha143 (29 Nov 2012)

  29 Nov 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha143.ebuild,
  -portage-2.2.0_alpha120.ebuild:
  2.2.0_alpha143 version bump. This includes all of the fixes in 2.1.11.32. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.32 (29 Nov 2012)

  29 Nov 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.32.ebuild:
  2.1.11.32 version bump. This fixes bug #367215 (package moves should not cause
  a package to block itself), bug #421099 (parallel strip issues with
  hardlinks), bug #434942 (obsolete eclass-overrides information in portage.5),
  bug #440680 (repoman deprecation warning for boost-utils.eclass), bug #440982
  (new emerge --quiet-fail option), bug #441948 (handle permission exceptions
  when writing elog logs), bug #442190 (fix emerge-webrsync to apply