@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1142 2012/12/04 16:28:44 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1143 2012/12/05 02:19:14 zmedico Exp $
+
+  05 Dec 2012; Zac Medico <zmedico@gentoo.org> portage-2.1.11.31.ebuild,
+  portage-2.1.11.33.ebuild, portage-2.1.11.9.ebuild,
+  portage-2.2.0_alpha142.ebuild, portage-2.2.0_alpha144.ebuild,
+  portage-9999.ebuild:
+  Accept missing readline flag for bash 3.x as discussed in bug #445576, comment
+  #9.
 
   04 Dec 2012; Zac Medico <zmedico@gentoo.org> portage-2.1.11.31.ebuild,
   portage-2.1.11.33.ebuild, portage-2.1.11.9.ebuild,
